@@ -1,3 +1,8 @@
+2005-04-09  Joerg Rosenkranz  <joergr@voelcker.com>
+
+	* mono-service.cs: Fixed dynamic loading of assemblies
+	from services. Cleaned up callback code.
+	
 2005-04-08  Joerg Rosenkranz  <joergr@voelcker.com>
 
 	* mono-service.cs: Restructured code to run service main loop
